<resources>
    <string name="app_name">MyStoryNew</string>
    <string name="illustration">Illustration</string>
    <string name="caption">Innovative ideas based on years of market research</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="story">Story</string>
    <string name="input_password">Input Password</string>
    <string name="error_message">Password must be 6 character</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="set_error_field">Field not allowed empty</string>
    <string name="input_name">Input Name</string>
    <string name="input_email">Input Email</string>
    <string name="user_not_found">Incorrect email or password</string>
    <string name="email_already_exist">Email already exist</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="user_created">User created</string>
    <string name="image_story">Image story</string>
    <string name="list_story">List Story</string>
    <string name="name_concat">Name: %1$s</string>
    <string name="description_concat">Description: %1$s</string>
    <string name="published_concat">Published: %1$s</string>
    <string name="detail_story">Detail Story</string>
    <string name="add_story">Add Story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="select_picture">Select Picture</string>
    <string name="enter_picture_message">Please enter a picture first</string>
    <string name="story_created">Story created</string>
    <string name="failed_take_picture">Failed to take picture</string>
    <string name="camera_failed">Camera failed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login_successfully">Login successfully</string>
    <string name="change_language">Change Language</string>
    <string name="try_again">Try Again</string>
</resources>